@startuml

class House {
  - locationFactory: LocationFactory
  - roomFactory : RoomFactory
  + House (...)
  + addRoom(...) : Room
  + getRoomByName(...) : Room
  + getRooms() : List<Room>
  + getLocation() : Location
  + defineLocation(...) : boolean
  + getDevicesGroupedByRoom() : Map<String, List<Device>>
  -validLocationFactory(...):boolean
  -validRoomFactory(...):boolean
  -validRoomName(...):boolean
}

class Catalogue {
  - actuatorClassList : List<String>
  - sensorClassList : List<String>
  +Catalogue(...)
  + getSensorsCatalogue() : List<String>
  + getActuatorsCatalogue() : List<String>
}

class Location {
  - address : String
  - zipCode : String

  + Location(...)
  + getAddress() : String
  + getZipCode() : String
  + getGPSLocation() : GPS
  -validAddress(...) : boolean
  -validZipCode(...) : boolean
  -validGPSFactory(...) : boolean
}

class GPS {
  - latitude : double
  - longitude : double
  + GPSLocation(...)
  + getLatitude() : double
  + getLongitude() : double
  -validLongitude(...):boolean
  -validLatitude(...):boolean
}

class Room {
  - name : String
  - floor : int
  - dimensionsFactory : DimensionsFactory
  - deviceFactory : DeviceFactory
  + Room(...)
  + getName() : String
  + getFloor() : int
  + getDimensions() : Dimensions
  + addNewDevice(...) : Device
  + getDevicesInRoom() : List<Device>
  + getDeviceByName(...) : Device
  -validName(...) : boolean
  -validDimensionsFactory(...) : boolean
  -validDeviceFactory(...) : boolean
  -validDeviceName(...) : boolean
}

class Dimensions {
  - width : double
  - length : double
  - height : double

  + Dimensions(...)
  + getWidth() : double
  + getLength() : double
  + getHeight() : double
  -validWidth(...) : boolean
  -validLength(...) : boolean
  -validHeight(...) : boolean
}

class Device {
  - name : String
  - type : String
  - active : boolean
  - functionalities : HashSet<String>
  - sensorFactory: SensorFactory
  - actuatorFactory: ActuatorFactory
  + Device(...)
  + getName() : String
  + getType() : String
  + addSensor(...) : Sensor
  + addActuator(...) : Actuator
  + deactivate() : boolean
  + getDeviceSensors() : List<Sensor>
  + getFunctionalities() : HashSet<String>
  -validClassName(...):boolean
  -validName(...) : boolean
  -validType(...) : boolean
  -validFactories(...):boolean
}

interface Sensor {
  + getType() : String
  + getValue() : String
  + getId() : int
  + setId(int) : int
}

interface Actuator{
    +getType(): ActuatorType
    +isActive(): boolean
    +activate():void
    +deactivate(): void
    +getId():int
    +setId(int): int
}


interface Value {
  + valueToString() : String
}

class IdGenerator{
- static sensorId:int
- static actuatorId:int
+ static generateSensorId:int
+ static generateActuatorId:int
+ static resetSensorId: void
+ static resetActuatorId: void
}

House "1" *-- "1" Location : contains
House "1" *-- "List<Room>" Room : contains

Location "1" *-- "1" GPS : contains

Room "1" *-- "List<Device>" Device : contains
Room "1" *-- "1" Dimensions : contains

Device "1" *-- "List<Sensor>" Sensor :  contains
Device "1" *-- "List<Actuator>" Actuator :  contains
Device "*" ..> "1" IdGenerator : uses
Sensor "1" ..> "*" Value : uses

@enduml